@@ -19,6 +19,7 @@ xs/ClutterGroup.xs
 xs/ClutterLabel.xs
 xs/ClutterMedia.xs
 xs/ClutterRectangle.xs
+xs/ClutterScore.xs
 xs/ClutterStage.xs
 xs/ClutterTexture.xs
 xs/ClutterTimeline.xs
